# GSD-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: dependency-boundaries.md  frameworks.md  one_pager.md  primitives.md  project-creation-model.md  roadmap.md  vision.md
docs/assets/: README.md
src/gsd_ai/: __init__.py  cli.py  schema.py  workspace.py
testplan/: GSD_AI_E2E_PREFLIGHT.json  GSD_AI_E2E_REVIEW_FEEDBACK.md  GSD_AI_E2E_REVIEW_PACKET.md  GSD_AI_E2E_TEST_PLAN.md  README.md
testplan/scripts/: gsd_ai_e2e_review.py
tests/: test_workspace.py
